# evi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_mac.sh  build_windows.sh  config.json  package_macos.sh  system_prompt.txt
examples/: coze_refine_test.rs
ort-dylib/onnxruntime-osx-x86_64-1.24.2/lib/: libonnxruntime.dylib
src/: download_model.rs  lib.rs  main.rs  models.rs  refine_mgr.rs  secret.rs
src/engine/: correction.rs  coze_refine.rs  debug_refine.rs  fallback.rs  llm.rs  mod.rs
src/text/: macos.rs  mod.rs  tsf.rs
src/ui/: api_key_dialog.rs  log_capture.rs  macos_tray.rs  mod.rs  win32.rs
