[package]
name = "vi"
version = "0.1.0"
edition = "2021"
description = "Voice Input Method - cross-platform voice input with clipboard injection"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"
ctrlc = "3"
cpal = "0.15"
ndarray = "0.17"
rustfft = "6"
rubato = "0.15"
unicode-segmentation = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
eframe = "0.31"
egui = "0.31"
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
windows = { version = "0.54", features = [
    "implement",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
 ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "copy-dylibs", "api-24"] }
tao = "0.31"
tray-icon = "0.20"
muda = "0.16"
rdev = "0.5"
enigo = "0.3"
core-graphics = "0.24"
core-foundation = "0.10"
