[package]
name = "vi"
version = "0.1.0"
edition = "2021"
description = "Evolution Voice Input Method"

[features]
default = []
refine-log = []
correction = []
mac = ["dep:tao", "dep:tray-icon", "dep:muda", "dep:rdev", "dep:enigo", "dep:core-graphics", "dep:core-foundation"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"
ctrlc = "3"
cpal = "0.15"
ndarray = "0.17"
rustfft = "6"
rubato = "0.15"
unicode-segmentation = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
eframe = "0.31"
egui = "0.31"
image = "0.25"
ureq = "3.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
windows = { version = "0.54", features = [
    "implement",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "copy-dylibs", "api-24"] }
tao = { version = "0.31", optional = true }
tray-icon = { version = "0.20", optional = true }
muda = { version = "0.16", optional = true }
rdev = { version = "0.5", optional = true }
enigo = { version = "0.3", optional = true }
core-graphics = { version = "0.24", optional = true }
core-foundation = { version = "0.10", optional = true }
